# advent-of-code

./: .gitignore  common.py  computer.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  day_template.py  pyproject.toml  requirements.txt
2025/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_10_fiddling.py  day_10_part2_wrangle.py  day_11.py  day_12.py  template.py
data/: day_3_wires.py  programs.py
tests/: test_computer.py  test_day_2.py  test_day_3.py
