[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code solutions"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "sympy",
    "jupyter",
    "tqdm",
    "seaborn",
    "networkx",
    "scipy",
    "numba",
    "pytest",
    "pylint",
    "ruff",
    "ortools>=9.14.6206",
    "line-profiler>=5.0.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".ruff_cache",
]

line-length = 100
